--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ environs = {extras = ["django"], version = "*"}
 whitenoise = "*"
 gunicorn = "*"
 djangorestframework-bulk = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
